--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
        <section class="section">
         <div class="container">
-          <h2 class="benefits-title ">Наши преимущества</h2>
+          <h2 class="benefits-title visually-hidden">Наши преимущества</h2>
            <ul class="benefits-list list">
           <li class="benefits-list-item">
             <h3 class="benefits-list-item-title">Внимание к деталям</h3>
