--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main class="body">
       <section class="section">
         <div class="container">
-          <h1 class="caption">Наши работы</h1>
+          <h1 class="caption visually-hidden">Наши работы</h1>
         <ul class="button-items list">
         <li class="button-item">
           <button class="button" type="button">Все</button>
